--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "jsdom": "9.11.0",
     "mocha": "3.2.0",
     "mock-raf": "1.0.0",
+    "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-test-renderer": "16.0.0",
     "sinon": "1.17.7"
   },
-  "dependencies": {
-    "react": "~16 || ~15"
+  "peerDependencies": {
+    "react": "^15.0.0 || ^16.0.0"
   }
 }
